<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="#50000000"
    tools:context="com.example.android.countdown.CountDownActivity">

    <TextView
        android:text="@string/vacation"
        android:textSize="70sp"
        android:textColor="#0000FF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"/>
    <TextView
        android:text="@string/app_name"
        android:textSize="55sp"
        android:textColor="#0000FF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"/>
    <TextView
        android:id="@+id/days"
        android:text="@string/days"
        android:textSize="45sp"
        android:textColor="#0000FF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"/>
    <TextView
        android:id="@+id/hours"
        android:text="@string/hours"
        android:textSize="45sp"
        android:textColor="#0000FF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"/>
    <TextView
        android:id="@+id/minutes"
        android:text="@string/Minutes"
        android:textSize="45sp"
        android:textColor="#0000FF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"/>
    <TextView
        android:id="@+id/seconds"
        android:text="@string/seconds"
        android:textSize="45sp"
        android:textColor="#0000FF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"/>

</LinearLayout>
